After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 697031 - gtk_notebook_draw's type doesn't match GtkWidget::draw
gtk_notebook_draw's type doesn't match GtkWidget::draw
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Widget: GtkNotebook
unspecified
Other All
: Normal minor
: ---
Assigned To: gtk-bugs
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2013-04-01 11:56 UTC by Morten Welinder
Modified: 2013-09-26 23:17 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Morten Welinder 2013-04-01 11:56:18 UTC
The result type should be gboolean, not gint.