Trivial: correct vfunc signatures

Harmless confusion between gint and gboolean
https://bugzilla.gnome.org/show_bug.cgi?id=697031